Plane Track Deform node fails to show output unless preview is visible in connected node. #39936

Closed
opened 2014-04-28 16:34:24 +02:00 by Lars Soderlind · 7 comments

System Information
Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600

Blender Version
Broken: blender-2.70-1d9e0c3-win64 (2014-04-01 23:09) and blender-2.70-4a1b877-win64 (2014-04-28 01:49) from buildbot
Worked: 2.70a

Short description of error
Plane Track Deform node fails to show output unless preview is visible in connected node.

I'm guessing you don't need the video but it's the fabric-eingang.avi found here:

http://projects.blender.org/scm/viewvc.php/trunk/lib/tests/tracking/footage/?root=bf-blender

Exact steps for others to reproduce the error
Open attached .blend
Click the backdrop button off and on again to redraw the screen.
Toggle node preview off (Shift-H) for the Image node and the Plane Track node result will disappear from backdrop.
The same thing happens if you connect any other node without preview to the Plane Track node input.

1_-_Node_Preview_on.png

2_-_Node_Preview_off.png

PlaneTrackNodeBug.blend

**System Information** Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600 **Blender Version** Broken: blender-2.70-1d9e0c3-win64 (2014-04-01 23:09) and blender-2.70-4a1b877-win64 (2014-04-28 01:49) from buildbot Worked: 2.70a **Short description of error** Plane Track Deform node fails to show output unless preview is visible in connected node. I'm guessing you don't need the video but it's the fabric-eingang.avi found here: http://projects.blender.org/scm/viewvc.php/trunk/lib/tests/tracking/footage/?root=bf-blender **Exact steps for others to reproduce the error** Open attached .blend Click the backdrop button off and on again to redraw the screen. Toggle node preview off (Shift-H) for the Image node and the Plane Track node result will disappear from backdrop. The same thing happens if you connect any other node without preview to the Plane Track node input. ![1_-_Node_Preview_on.png](https://archive.blender.org/developer/F86292/1_-_Node_Preview_on.png) ![2_-_Node_Preview_off.png](https://archive.blender.org/developer/F86294/2_-_Node_Preview_off.png) [PlaneTrackNodeBug.blend](https://archive.blender.org/developer/F86296/PlaneTrackNodeBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @soderlind

Added subscriber: @soderlind
Lukas Tönne self-assigned this 2014-04-29 09:43:28 +02:00
Member

Looks like somehow the resolution is not propagated upstream to the image node by the plane track. It ends up with (0,0) resolution and doesn't give a valid output then.

Looks like somehow the resolution is not propagated upstream to the image node by the plane track. It ends up with (0,0) resolution and doesn't give a valid output then.

This issue was referenced by blender/blender-addons-contrib@55c720f06e

This issue was referenced by blender/blender-addons-contrib@55c720f06e2c2edd738ecb9d1fa45b9ef379e62a

This issue was referenced by 55c720f06e

This issue was referenced by 55c720f06e2c2edd738ecb9d1fa45b9ef379e62a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 55c720f06e.

Closed by commit 55c720f06e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39936
No description provided.