Fix T39936: Plane Track operation would not initialize resolutions for upstream nodes.