source/blender/compositor/operations/COM_PlaneTrackOperation.h
@@ -68,6 +68,9 @@ public:
 	void determineResolution(unsigned int resolution[2], unsigned int preferredResolution[2])
 	{
 		PlaneTrackCommon::determineResolution(resolution, preferredResolution);
+		
+		unsigned int temp[2];
+		NodeOperation::determineResolution(temp, resolution);
 	}
 };
 
@@ -84,6 +87,9 @@ public:
 	void determineResolution(unsigned int resolution[2], unsigned int preferredResolution[2])
 	{
 		PlaneTrackCommon::determineResolution(resolution, preferredResolution);
+		
+		unsigned int temp[2];
+		NodeOperation::determineResolution(temp, resolution);
 	}
 };
 
